Support `JsonRootName`